--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My HS Counselor</title>
+    <meta name="description" content="Personalized career guidance for high school students choosing between college and trade paths." />
   </head>
   <body>
     <div id="root"></div>
