--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My HS Counselor</title>
     <meta name="description" content="Personalized career guidance for high school students choosing between college and trade paths." />
+    <meta name="description" content="My HS Counselor – Careers. Life Skills. Confidence" />
   </head>
   <body>
     <div id="root"></div>
