--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My HS Counselor</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personalized career guidance for high school students choosing between college and trade paths." />
     <meta name="description" content="My HS Counselor – Careers. Life Skills. Confidence" />
   </head>
