--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="My HS Counselor – Careers. Life Skills. Confidence" />
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
