--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My HS Counselor</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personalized career guidance for high school students choosing between college and trade paths." />
-    <meta name="description" content="My HS Counselor – Careers. Life Skills. Confidence" />
-  </head>
+    <meta name="description" content="My HS Counselor offers personalized career guidance, life skills, and confidence-building for high school students exploring college and trade paths." />
+    </head>
   <body>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-  <input type="text" name="name" />
-  <input type="email" name="email" />
-  <textarea name="message"></textarea>
-  </form>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+      <input type="hidden" name="bot-field" />
+      </form>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  </body>
+    </body>
 </html>
