--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My HS Counselor</title>
     <meta name="description" content="My HS Counselor offers personalized career guidance, life skills, and confidence-building for high school students exploring college and trade paths." />
-    </head>
+  </head>
   <body>
-      <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="firstName" />
+      <input type="text" name="lastName" />
       <input type="email" name="email" />
-      <textarea name="message"></textarea>
+      <textarea name="suggestionsFeedback"></textarea>
+      <input type="radio" name="siteRating" value="1" />
+      <input type="radio" name="siteRating" value="2" />
+      <input type="radio" name="siteRating" value="3" />
+      <input type="radio" name="siteRating" value="4" />
+      <input type="radio" name="siteRating" value="5" />
+      <select name="howDidYouHear">
+        <option value="">Select an option</option>
+        <option value="searchEngine">Search Engine</option>
+        <option value="socialMedia">Social Media</option>
+        <option value="friendFamily">Friend or Family</option>
+        <option value="schoolCounselor">School Counselor</option>
+        <option value="other">Other</option>
+      </select>
       <input type="hidden" name="bot-field" />
-      </form>
+    </form>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    </body>
+  </body>
 </html>
