--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My HS Counselor</title>
     <meta
       name="description"
-      content="My HS Counselor offers personalized career guidance, life skills, and confidence-building for high school students exploring college and trade paths."
+      content="My HS Counselor offers personalized career guidance, life skills, and confidence-building for high school students exploring life after high school."
     />
   </head>
   <body>
