--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
       name="description"
       content="My HS Counselor offers personalized career guidance, life skills, and confidence-building for high school students exploring life after high school."
     />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VGT7LNXWNG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VGT7LNXWNG');
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
