--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
   gtag('config', 'G-VGT7LNXWNG');
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3588367397920518"
+     crossorigin="anonymous"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
