--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3588367397920518"
      crossorigin="anonymous"></script>
-
+<script async src="https://fundingchoicesmessages.google.com/i/pub-3588367397920518?ers=1"></script><script>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
